[workspace]
members = [
	"asset-registry",
	# "auction",
	# "authority",
	# "benchmarking",
	# "build-script-utils",
	# "currencies",
	# "gradually-update",
	# "nft",
	# "oracle",
	# "oracle/runtime-api",
	# "parameters",
	# "payments",
	# "rate-limit",
	# "rewards",
	"tokens",
	"tokens/runtime-api",
	"traits",
	# "unknown-tokens",
	"utilities",
	# "vesting",
	# "xcm-mock-message-queue",
	# "xcm-support",
	# "xcm",
	# "xtokens",
]

resolver = "2"

[profile.dev]
split-debuginfo = "unpacked"

[workspace.dependencies]
log = { version = "0.4.20", default-features = false }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.189" }
parity-scale-codec = { version = "3.6.5", default-features = false, features = ["max-encoded-len"] }

# cumulus-pallet-xcm = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "feature/update-v1.9.0", default-features = false }
# cumulus-primitives-core = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "feature/update-v1.9.0", default-features = false }
frame-benchmarking = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "feature/update-v1.9.0", default-features = false }
frame-support = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "feature/update-v1.9.0", default-features = false }
frame-system = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "feature/update-v1.9.0", default-features = false }
pallet-balances = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "feature/update-v1.9.0", default-features = false }
pallet-elections-phragmen = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "feature/update-v1.9.0", default-features = false }
pallet-message-queue = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "feature/update-v1.9.0", default-features = false }
pallet-preimage = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "feature/update-v1.9.0", default-features = false }
pallet-root-testing = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "feature/update-v1.9.0", default-features = false }
pallet-scheduler = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "feature/update-v1.9.0", default-features = false }
pallet-timestamp = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "feature/update-v1.9.0", default-features = false }
pallet-treasury = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "feature/update-v1.9.0", default-features = false }
# pallet-xcm = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "feature/update-v1.9.0", default-features = false }
# polkadot-parachain-primitives = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "feature/update-v1.9.0", default-features = false }
# polkadot-runtime-common = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "feature/update-v1.9.0", default-features = false }
# polkadot-runtime-parachains = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "feature/update-v1.9.0", default-features = false }
sp-api = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "feature/update-v1.9.0", default-features = false }
sp-application-crypto = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "feature/update-v1.9.0", default-features = false }
sp-arithmetic = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "feature/update-v1.9.0", default-features = false }
sp-core = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "feature/update-v1.9.0", default-features = false }
sp-io = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "feature/update-v1.9.0", default-features = false }
sp-runtime = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "feature/update-v1.9.0", default-features = false }
sp-runtime-interface = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "feature/update-v1.9.0", default-features = false }
sp-staking = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "feature/update-v1.9.0", default-features = false }
sp-std = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "feature/update-v1.9.0", default-features = false }
sp-storage = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "feature/update-v1.9.0", default-features = false }
mangata-types = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "feature/update-v1.9.0", default-features = false }
# xcm = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "feature/update-v1.9.0", package = "staging-xcm", default-features = false }
# xcm-builder = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "feature/update-v1.9.0", package = "staging-xcm-builder", default-features = false }
# xcm-executor = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "feature/update-v1.9.0", package = "staging-xcm-executor", default-features = false }

# xcm-simulator = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "feature/update-v1.9.0" }

[patch."https://github.com/paritytech/polkadot-sdk"]
# ... which satisfies git dependency `sp-crypto-ec-utils` of package `sp-ark-bls12-381 v0.4.2 (https://github.com/paritytech/arkworks-substrate#caa2eed7)`
sp-crypto-ec-utils = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "feature/update-v1.9.0", default-features = false }
