[package]
name = "orml-tokens"
description = "Fungible tokens module that implements `MultiCurrency` trait."
repository = "https://github.com/open-web3-stack/open-runtime-module-library/tree/master/tokens"
license = "Apache-2.0"
version = "0.4.0"
authors = ["Laminar Developers <hello@laminar.one>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.111", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-runtime = { version = "3.0.0", default-features = false , git="https://github.com/mangata-finance/substrate", branch="mangata-dev" }
sp-io = { version = "3.0.0", default-features = false , git="https://github.com/mangata-finance/substrate", branch="mangata-dev" }
sp-std = { version = "3.0.0", default-features = false , git="https://github.com/mangata-finance/substrate", branch="mangata-dev" }

frame-support = { version = "3.0.0", default-features = false , git="https://github.com/mangata-finance/substrate", branch="mangata-dev" }
frame-system = { version = "3.0.0", default-features = false , git="https://github.com/mangata-finance/substrate", branch="mangata-dev" }

orml-traits = { path = "../traits", version = "0.3.1", default-features = false }
mangata-primitives = { git = 'https://github.com/mangata-finance/mangata-node', default-features = false, version = '0.1.0', rev = "f3ecab" }

[dev-dependencies]
sp-core = { version = "3.0.0", default-features = false , git="https://github.com/mangata-finance/substrate", branch="mangata-dev" }
pallet-treasury = { version = "3.0.0" , git="https://github.com/mangata-finance/substrate", branch="mangata-dev" }
pallet-elections-phragmen = { version = "3.0.0" , git="https://github.com/mangata-finance/substrate", branch="mangata-dev" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"sp-std/std",
	"frame-support/std",
	"frame-system/std",
	"orml-traits/std",
]
