[package]
name = "orml-tokens"
description = "Fungible tokens module that implements `MultiCurrency` trait."
repository = "https://github.com/open-web3-stack/open-runtime-module-library/tree/master/tokens"
license = "Apache-2.0"
version = "0.4.1-dev"
authors = ["Laminar Developers <hello@laminar.one>"]
edition = "2018"

[dependencies]
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.124", optional = true }
codec = { package = "parity-scale-codec", version = "2.3.1", default-features = false, features = ["max-encoded-len"] }
sp-runtime = { default-features = false, path = "../../substrate/primitives/runtime" }
sp-std = { default-features = false , path = "../../substrate/primitives/std"}
frame-support = { default-features = false, path = "../../substrate/frame/support" }
frame-system = { default-features = false, path = "../../substrate/frame/system" }
orml-traits = { path = "../traits", version = "0.4.1-dev", default-features = false }

mangata-primitives = { path = "../../mangata-node/primitives/mangata", default-features = false, version = '0.1.0' }

[dev-dependencies]
sp-core = { default-features = false, path = "../../substrate/primitives/core" }
sp-io = { default-features = false, path = "../../substrate/primitives/io" }
pallet-treasury = { version = "4.0.0-dev" , path = "../../substrate/frame/treasury" }
pallet-elections-phragmen = { version = "5.0.0-dev" , path = "../../substrate/frame/elections-phragmen" }
#pallet-elections-phragmen = { version = "3.0.0" , path = "../../substrate/frame/elections-phragmen" }


[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"scale-info/std",
	"sp-runtime/std",
	"sp-std/std",
	"frame-support/std",
	"frame-system/std",
	"orml-traits/std",
]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
