[package]
name = "orml-utilities"
description = "Various utilities including `FixedU128` and `LinkedList`."
repository = "https://github.com/open-web3-stack/open-runtime-module-library/tree/master/utilities"
license = "Apache-2.0"
version = "0.4.1-dev"
authors = ["Laminar Developers <hello@laminar.one>"]
edition = "2018"

[dependencies]
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.124", optional = true }
codec = { package = "parity-scale-codec", version = "2.3.1", default-features = false }
frame-support = { default-features = false , path = "../../substrate/frame/support" }
sp-runtime = { default-features = false , path = "../../substrate/primitives/runtime" }
sp-std = { default-features = false , path = "../../substrate/primitives/std" }
sp-io = { default-features = false , path = "../../substrate/primitives/io" }

[dev-dependencies]
serde_json = "1.0.64"
frame-system = { default-features = false , path = "../../substrate/frame/system" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"scale-info/std",
	"frame-support/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-io/std",
]
